WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
228020
[GStreamer] RealtimeMediaSourceCenter and VideoEncoder are not libwebrtc-specific
https://bugs.webkit.org/show_bug.cgi?id=228020
Summary
[GStreamer] RealtimeMediaSourceCenter and VideoEncoder are not libwebrtc-spec...
Philippe Normand
Reported
2021-07-16 02:12:54 PDT
Follow-up from
bug 227991
. These two can be reused soon for the gst-webrtc backend.
Attachments
[fast-cq] Patch
(39.13 KB, patch)
2021-07-16 02:15 PDT
,
Philippe Normand
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2021-07-16 02:15:44 PDT
Created
attachment 433666
[details]
[fast-cq] Patch
EWS
Comment 2
2021-07-16 08:32:39 PDT
Committed
r279985
(
239728@main
): <
https://commits.webkit.org/239728@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 433666
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-07-16 08:33:21 PDT
<
rdar://problem/80686445
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug