Source/WebCore/platform/mediastream/gstreamer/GStreamerVideoEncoder.cpp
@@ -21,7 +21,7 @@
 #include "config.h"
 #include "GStreamerVideoEncoder.h"
 
-#if ENABLE(VIDEO) && ENABLE(MEDIA_STREAM) && USE(LIBWEBRTC) && USE(GSTREAMER)
+#if ENABLE(VIDEO) && ENABLE(MEDIA_STREAM) && USE(GSTREAMER)
 
 #include "GStreamerCommon.h"
 #include <wtf/StdMap.h>
@@ -287,4 +287,4 @@ static void webkit_webrtc_video_encoder_class_init(WebKitWebrtcVideoEncoderClass
         }, "bitrate", setBitrateBitPerSec, "gop-size");
 }
 
-#endif // ENABLE(VIDEO) && ENABLE(MEDIA_STREAM) && USE(LIBWEBRTC) && USE(GSTREAMER)
+#endif // ENABLE(VIDEO) && ENABLE(MEDIA_STREAM) && USE(GSTREAMER)
